testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/443_InterfaceRefType.adl
CONTEXT InterfaceRefType IN ENGLISH

INTERFACE Main : I[A]
  BOX [ l : I[A] INTERFACE B -- Should give a type error (ticket 443)
      ]
   
INTERFACE B : I[B]
  BOX [ l : I[B]
      ]
  
ENDCONTEXT
